--- a/Views/Admin/StockOut.cshtml
+++ b/Views/Admin/StockOut.cshtml
@@ -98,9 +98,10 @@
                                         <td></td>
                                         <td>@Html.DisplayFor(modelItem => item.RInvoiceNo)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>
+                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                        @*<td>
                                             <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                        </td>
+                                        </td>*@
                                         <td>
                                             @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
                                         </td>
