--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -105,38 +105,39 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                        </td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
-                                        </td>
-                                        @if (!string.IsNullOrEmpty(item.PIUpload))
-                                        {
-                                            <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
-                                        }
-                                        else
-                                        {
-                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                        }
-                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                        <td>
-                                            @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                    @*<td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
+                                    <td>
+                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
+                                    </td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
+                                    </td>
+                                    @if (!string.IsNullOrEmpty(item.PIUpload))
+                                    {
+                                        <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
+                                    }
+                                    else
+                                    {
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                    }
+                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                    <td>
+                                        @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                            new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                    </td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
