--- a/Views/Admin/MaterialPickup.cshtml
+++ b/Views/Admin/MaterialPickup.cshtml
@@ -97,30 +97,29 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                <tr>
-                                    <td></td>
-                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                    @*<td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
-                                    <td>
-                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
-
-                                    </td>
-                                    <td>
-                                        @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
-                                    </td>
-                                    <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                    @if (Model.UserProfileModels.EmpType != "User")
-                                    {
+                                    <tr>
+                                        <td></td>
+                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
                                         <td>
-                                            @Html.EncodedActionLink("Receive", "MaterialReceive", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Receive" })
+                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
+
                                         </td>
-                                    }
-                                </tr>
+                                        <td>
+                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                        @if (Model.UserProfileModels.EmpType != "User")
+                                        {
+                                            <td>
+                                                @Html.EncodedActionLink("Receive", "MaterialReceive", "Admin",
+                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Receive" })
+                                            </td>
+                                        }
+                                    </tr>
                                 }
                             </tbody>
                         </table>
