--- a/Views/Admin/PORequestInvoice.cshtml
+++ b/Views/Admin/PORequestInvoice.cshtml
@@ -265,7 +265,7 @@
                                     <tr>
                                         <td>@i</td>
                                         <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>
+                                        <td title="@item.SpcRemark">
                                             @Html.DisplayFor(modelItem => item.Product)<br>
                                             Brand : @item.Brand<br>
                                             Model : @item.ModelNo
