--- a/Views/Admin/PORequestInvoiceUpload.cshtml
+++ b/Views/Admin/PORequestInvoiceUpload.cshtml
@@ -280,7 +280,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
                                     <td>@Html.DisplayFor(modelItem => item.POId)</td>
                                     <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                    <td>
+                                    <td title="@item.SpcRemark">
                                         @Html.DisplayFor(modelItem => item.Product)<br>
                                         Brand : @item.Brand<br>
                                         Model : @item.ModelNo
