--- a/Views/Admin/POAssign.cshtml
+++ b/Views/Admin/POAssign.cshtml
@@ -129,7 +129,7 @@
                                             <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
                                         </td>
                                         <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>
+                                        <td title="@item.SpcRemark">
                                             @Html.DisplayFor(modelItem => item.Product)<br>
                                             Brand : @item.Brand<br>
                                             Model : @item.ModelNo
