--- a/Views/Admin/POGenerate.cshtml
+++ b/Views/Admin/POGenerate.cshtml
@@ -589,7 +589,7 @@
                                         <td>@Html.DisplayFor(modelItem => item.POId)</td>
                                         <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
                                         <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>
+                                        <td title="@item.SpcRemark">
                                             @Html.DisplayFor(modelItem => item.Product)<br>
                                             Brand : @item.Brand<br>
                                             Model : @item.ModelNo
