--- a/Views/Admin/PurchaseOrder.cshtml
+++ b/Views/Admin/PurchaseOrder.cshtml
@@ -310,7 +310,7 @@
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                     <div class="form-group">
                                         @Html.LabelFor(m => m.PurOrdModels.SpcRemark, new { @class = "form-control-label" })
-                                        @Html.TextBoxFor(m => m.PurOrdModels.SpcRemark,
+                                        @Html.TextAreaFor(m => m.PurOrdModels.SpcRemark,
                                 new
                                 {
                                     @class = "form-control text-capitalize spcrmk",
