--- a/Views/Admin/PurchaseOrders.cshtml
+++ b/Views/Admin/PurchaseOrders.cshtml
@@ -101,9 +101,9 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ExpDlvDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CurrentStage)</th>
                                     @*@if (Model.UserProfileModels.EmpType == "SupAdmin")
-                                    {
-                                        <th>Cancel</th>
-                                    }*@
+                                        {
+                                            <th>Cancel</th>
+                                        }*@
                                 </tr>
                             </thead>
                             <tbody>
@@ -125,7 +125,9 @@
                                             <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
                                         </td>
                                         <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Product)</td>
+                                        <td title="@item.SpcRemark">
+                                            @Html.DisplayFor(modelItem => item.Product)<br>
+                                        </td>
                                         <td>@Html.DisplayFor(modelItem => item.Brand)</td>
                                         <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
@@ -137,12 +139,12 @@
                                         <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
                                         @*@if (Model.UserProfileModels.EmpType == "SupAdmin" && item.Status!="MR")
-                                        {
-                                            <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-times'></i>", "POCancel", "Admin",
-                                                    new { id = item.POPId }, new { @class = "btn btn-edt bg-red btn-sm mb-act-confirm", @data_box = "#mb-act-cnfrm", title = "PO Not Approved" })
-                                            </td>
-                                        }*@
+                                            {
+                                                <td>
+                                                    @Html.EncodedActionLink("<i class='fa fa-times'></i>", "POCancel", "Admin",
+                                                        new { id = item.POPId }, new { @class = "btn btn-edt bg-red btn-sm mb-act-confirm", @data_box = "#mb-act-cnfrm", title = "PO Not Approved" })
+                                                </td>
+                                            }*@
                                     </tr>
                                 }
                             </tbody>
