--- a/Views/Admin/Stock.cshtml
+++ b/Views/Admin/Stock.cshtml
@@ -83,7 +83,7 @@
                                     <tr>
                                         <td></td>
                                         <td>@Html.DisplayFor(modelItem => item.CstMtrlCode)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Product)<br>
+                                        <td title="@item.SpcRemark">@Html.DisplayFor(modelItem => item.Product)<br>
                                             Brand : @item.Brand<br>
                                             Model : @item.ModelNo
                                         </td>
