--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -86,6 +86,7 @@
                                 <tr>
                                     <th><input type="checkbox" id="seallasnpo" /></th>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PmntReqNo)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PReqDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
@@ -108,6 +109,7 @@
                                 <tr>
                                     <td></td>
                                     <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.PmntReqNo)</td>
                                     <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
                                     <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                     <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
