--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -79,6 +79,7 @@
                             <thead>
                                 <tr>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PmntReqNo)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PADate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
@@ -103,6 +104,7 @@
                                     {
                                         <tr class="suc-tbl-row">
                                             <td></td>
+                                            <td>@Html.DisplayFor(modelItem => item.PmntReqNo)</td>
                                             <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                             <td>
                                                 @if (item.PADate == "01-01-1900")
@@ -116,7 +118,7 @@
                                             </td>
                                             <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                             <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                           @* <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
+                                            @* <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
                                             <td>
                                                 @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Edit", @target = "_blank" })
 
@@ -143,7 +145,7 @@
                                                 @*@if (item.Status != "Material Received")
                                                     {*@
                                                 @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
-                                                 new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                                 new { id = item.PmntReqNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
                                                 @*}*@
                                             </td>
                                         </tr>
@@ -152,6 +154,7 @@
                                     {
                                         <tr class="pen-tbl-row">
                                             <td></td>
+                                            <td>@Html.DisplayFor(modelItem => item.PmntReqNo)</td>
                                             <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                             <td>
                                                 @if (item.PADate == "01/01/1900")
@@ -190,7 +193,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
                                                 @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
-                                                 new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                                 new { id = item.PmntReqNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
                                             </td>
                                         </tr>
                                     }
@@ -198,6 +201,7 @@
                                     {
                                         <tr>
                                             <td></td>
+                                            <td>@Html.DisplayFor(modelItem => item.PmntReqNo)</td>
                                             <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                             <td>
                                                 @if (item.PADate == "01/01/1900")
@@ -236,7 +240,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
                                                 @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
-                                                 new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                                 new { id = item.PmntReqNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
                                             </td>
                                         </tr>
                                     }
